--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
     <div class="hadia" id="hadia">
       <div class="container">
         <div class="row">
-          <p data-aos="zoom-in">
-            Klik ini sayang <i onclick="tanya()"></i>
+          <button onclick="tanya()" data-aos="zoom-in">
+            Klik ini sayang
           </p>
         </div>
       </div>
