Changes to be committed: 	modified:   1.png 	modified:   index.html 	modified:   lg.mp3 	new file:   love/index.html 	new file:   love/script.js 	new file:   love/style.css 	deleted:    style.css

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 <br/>
                   Hari ini, kita merayakan 8 bulan ya keknya wwkwk,ya banyak hal kebersamaan kita selama di Lombok walapun ahkirnya dipisahkan jarak untuk saat ini. Aku ingin kamu tahu betapa istimewanya kamu bagiku dan betapa besar arti kebersamaan kita, walaupun seringkali hanya melalui layar.
                   aku tahu hubungan kita akan penuh tantangan, tetapi kita telah membuktikan bahwa tidak ada yang bisa menghentikan dua hati yang saling mencintai. Setiap pesan, panggilan video, dan momen-momen kecil yang kita bagi, semuanya menjadi kenangan berharga yang selalu membuat aku tersenyum.
-                  Aku selalu merasa bersyukur atas ketulusanmu, kesabaranmu, dan kamu masih mau percayain hubungan ini sama aku. Kamu jadi salah satualasan aku terus berjuang. Walaupun kita tidak bisa selalu bersama secara fisik, Kamu membuat hari aku menjadi lebih cerah dan penuh harapan.
+                  Aku selalu merasa bersyukur atas ketulusanmu, kesabaranmu, dan kamu masih mau percayain hubungan ini sama aku. Kamu jadi salah satu alasan kenapa aku harus terus berjuang. Walaupun kita tidak bisa selalu bersama secara fisik, Kamu membuat hari aku menjadi lebih cerah dan penuh harapan.
                   Semoga hubungan kita terus tumbuh dan semakin ku Aku berjanji buat hubungan ini lebih baik lagi percaya sama aku sayang doain aku ya, aku selalu usahain yang terbaik sebisa aku untuk kamu dan hubunga kita. Tidak ada yang lebih aku inginkan selain melihat kita bahagia bersama, mengejar impian-impian kita, dan suatu hari nanti, akhirnya bisa saling merangkul tanpa ada jarak yang memisahkan.
-                  Selamat anniversary,sayangku.Terima kasih telah menjadi bagian dari hidupku dan memberikan begitu banyak cinta dan kebahagiaan. Aku mencintaimu lebih dari kata-kata bisa ungkapkan, dan aku tidak sabar menantikan semua hari indah yang akan kita lalui bersama.
+                  Selamat anniversary,sayangku.Terima kasih telah menjadi bagian dari hidup dan kebahagiaanku. Aku mencintaimu lebih dari kata-kata bisa ungkapkan, tunggu ya sayang lagi diusahain semuanya untuk mimpi kita
                   Dengan cinta dan kerinduan yang mendalam, 
                   <br/>
                   <br/>
@@ -305,7 +305,7 @@
             <div class="card">
               <div class="card-body mt-4 mb-4">
                 <h5 class="card-title">THANKS YOU<br />FOR BEING YOU</h5>
-                <p class="card-text">"WE'LL ALWAYS BE HERE FOR YOU"</p>
+                <p class="card-text">"I am always here for you"</p>
               </div>
             </div>
           </div>
@@ -348,7 +348,7 @@
       }
       function wa(isi) {
         window.open(
-          "https://api.whatsapp.com/send?text= harapan aku buat aku hubungan kedapannya....dan pesan aku buat aku " +
+          "https://api.whatsapp.com/send?text= harapan aku buat aku hubungan kedepannya.... dan pesan aku buat aku..... " +
             isi
         );
       }
